# vllora

./: .dockerignore  .gitignore  .gitmodules  .versionrc  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  INTERCEPTORS.md  Makefile  README.md  ROUTING.md  config.sample.yaml  diesel.toml  dist  docker-compose.yml  mcp.md  release.sh
core/: Cargo.toml
core/sqlite_migrations/2025-09-30-065040-0000_init_metadata/: down.sql  up.sql
core/sqlite_migrations/2025-09-30-101703_add_models_table/: down.sql  up.sql
core/sqlite_migrations/2025-10-01-052112-0000_add_endpoint_to_models/: up.sql
core/sqlite_migrations/2025-10-01-101509-0000_add_traces_table/: down.sql  up.sql
core/sqlite_migrations/2025-10-13-115018-0000_add_project_model_restrictions/: down.sql  up.sql
core/sqlite_migrations/2025-11-19-132400-0000_add_indexes/: down.sql  up.sql
core/sqlite_migrations/2025-11-24-152000-0001_add_experiments_table/: down.sql  up.sql
core/sqlite_migrations/2025-12-16-164248-0000_add_custom_inference_api_type/: down.sql  up.sql
core/sqlite_migrations/2025-12-22-094453-0000_add_is_custom_to_providers_and_models/: down.sql  up.sql
core/sqlite_migrations/2025-12-29-100000-0000_add_label_index/: down.sql  up.sql
core/sqlite_migrations/2025-12-30-150238-0000_add_metrics_table/: down.sql  up.sql
core/sqlite_migrations/2026-01-15-092835-0000_create_finetune_jobs/: down.sql  up.sql
core/sqlite_migrations/2026-03-06-140000-0000_add_evaluator_version_to_finetune_jobs/: down.sql  up.sql
core/sqlite_migrations/2026-03-10-120000-0000_create_workflows/: down.sql  up.sql
core/sqlite_migrations/2026-03-10-140000-0000_rename_finetune_jobs_dataset_to_workflow/: down.sql  up.sql
core/sqlite_migrations/2026-03-11-090000-0000_create_knowledge/: down.sql  up.sql
core/sqlite_migrations/2026-03-11-100000-0000_add_eval_script_to_workflows/: down.sql  up.sql
core/sqlite_migrations/2026-03-11-100001-0000_create_workflow_records/: down.sql  up.sql
core/sqlite_migrations/2026-03-11-100002-0000_create_workflow_topics/: down.sql  up.sql
core/sqlite_migrations/2026-03-11-100003-0000_create_eval_jobs/: down.sql  up.sql
core/sqlite_migrations/2026-03-11-100004-0000_create_knowledge_sources/: down.sql  up.sql
core/sqlite_migrations/2026-03-11-120000-0000_add_eval_job_fields/: down.sql  up.sql
core/sqlite_migrations/2026-03-11-120000-0000_create_knowledge_source_parts/: down.sql  up.sql
core/sqlite_migrations/2026-03-11-130000-0000_drop_legacy_knowledge_source_columns/: down.sql  up.sql
core/sqlite_migrations/2026-03-11-200000-0000_add_state_to_workflows/: down.sql  up.sql
core/sqlite_migrations/2026-03-12-100000-0000_rename_dry_run_score/: down.sql  up.sql
core/sqlite_migrations/2026-03-12-100001-0000_ensure_knowledge_source_parts_exists/: up.sql
core/sqlite_migrations/2026-03-12-120000-0000_add_reference_id_to_knowledge_sources_and_parts/: down.sql  up.sql
core/sqlite_migrations/2026-03-12-130000-0000_refactor_workflow_topics_and_add_topic_source_relations/: down.sql  up.sql
core/sqlite_migrations/2026-03-12-140000-0000_topic_relations_use_source_parts/: down.sql  up.sql
core/sqlite_migrations/2026-03-12-150000-0000_replace_record_topic_with_topic_id/: down.sql  up.sql
core/sqlite_migrations/2026-03-16-120000-0000_create_workflow_logs/: down.sql  up.sql
core/sqlite_migrations/2026-03-17-120000-0000_drop_eval_jobs_polling_snapshot/: down.sql  up.sql
core/sqlite_migrations/2026-03-18-120000-0000_workflow_records_composite_key/: down.sql  up.sql
core/sqlite_migrations/2026-03-26-120000-0000_add_embeddings_to_knowledge_source_parts/: down.sql  up.sql
core/sqlite_migrations/2026-03-31-120000-0000_add_inference_parameters_to_finetune_jobs/: down.sql  up.sql
core/sqlite_migrations/2026-04-06-140000-0000_add_pipeline_journal_to_workflows/: down.sql  up.sql
core/sqlite_migrations/2026-04-08-120000-0000_create_trace_bundles/: down.sql  up.sql
core/sqlite_migrations/2026-04-10-120000-0000_add_records_pagination_index/: down.sql  up.sql
core/sqlite_migrations/2026-04-13-120000-0000_create_trace_analyses/: down.sql  up.sql
core/sqlite_migrations/2026-04-23-150000-0000_add_record_origin_traceability/: down.sql  up.sql
core/sqlite_migrations/2026-04-23-160000-0000_add_change_and_execution_log_to_workflows/: down.sql  up.sql
core/sqlite_migrations/2026-04-23-170000-0000_create_jobs_and_jobs_logs/: down.sql  up.sql
core/src/: embed_mod.rs  error.rs  lib.rs  metrics.rs  models.rs
core/src/credentials/: mod.rs  provider_detector.rs  storage.rs
core/src/database/: clickhouse.rs  error.rs  mod.rs
core/src/events/: broadcast_channel_manager.rs  callback_handler.rs  layer.rs  mod.rs  model_events_handler.rs  span.rs  ui_broadcaster.rs
core/src/executor/: context.rs  embeddings.rs  image_generation.rs  mod.rs  responses.rs
core/src/finetune/: mod.rs  topic_generator.rs
finetune/: CURL_EXAMPLES.md  Cargo.toml  README.md
finetune/src/: README.md  client.rs  gateway_client.rs  idempotency.rs  job_error.rs  lib.rs  types.rs
finetune/tests/: precision_contract.rs
gateway/: Cargo.toml  SESSION_API.md  TOPIC_HIERARCHY_CURL_EXAMPLE.md  models_data.json  test-api.sh
gateway/.cargo/: config.toml
gateway/agents/: vllora-data-agent.md  vllora-experiment-agent.md  vllora-orchestrator.md  vllora-ui-agent.md
gateway/src/: agents.rs  callback_handler.rs  cli.rs  config.rs  cost.rs  distri.rs  eval_state_tracker.rs  finetune_state_tracker.rs  guardrails.rs  http.rs  job_queue_runner.rs  knowledge_embeddings.rs  limit.rs  main.rs  metrics.rs  metrics_writer.rs  otel.rs  ports.rs  seed.rs  session.rs  tracing.rs  tui copy.rs  tui.rs  usage.rs
gateway/tests/: README.md  plugin_behavior.rs
guardrails/: Cargo.toml
guardrails/src/: lib.rs  tests.rs  types.rs
llm/: Cargo.toml  Readme.md
llm/src/: error.rs  lib.rs  tools.rs
metadata/: Cargo.toml
metadata/src/: error.rs  lib.rs  pool.rs  schema.rs  test_utils.rs  utils.rs
telemetry/: Cargo.toml
telemetry/examples/: README.md  tracing_example.rs
telemetry/src/: baggage.rs  lib.rs  metrics_service.rs
(+482 files in other folders)
