[workspace]
resolver = "2"
members = ["gateway", "core", "guardrails"]
default-members = ["gateway"]

[workspace.dependencies]
vllora_core = { path = "../ai-gateway/core", features = ["postgres"], default-features = false }
async-openai = { package = "async-openai-compat", version = "0.29.8" }
thiserror = "2.0.12"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
regex = "1.12"
lazy_static = "1.4"
async-trait = "0.1"
tokio = { version = "1.48.0", features = ["rt", "rt-multi-thread", "sync"] }
chrono = { version = "0.4", features = ["serde"] }

tracing = { version = "0.1.41", features = ["log", "valuable"] }
tracing-opentelemetry = { version = "0.31", default-features = false }
tracing-futures = { version = "0.2.5", features = ["futures-03"] }
tracing-subscriber = { version = "0.3.20", features = [
  "env-filter",
  "tracing-log",
  "valuable",
] }

opentelemetry = "0.30"
opentelemetry-otlp = { version = "0.30", features = ["tls", "grpc-tonic"] }
opentelemetry_sdk = { version = "0.30", features = ["rt-tokio"] }

valuable = { version = "0.1", features = ["derive"] }

tonic = "0.13.0"