[package]
name = "vllora_core"
version = "0.1.8"
edition = "2021"
authors = ["Vllora Team<api@vllora.dev>"]
description = "AI gateway Core for Vllora."
license = "Apache-2.0"
repository = "https://github.com/vllora/vllora"
documentation = "https://vllora.dev/docs"
readme = "../README.md"
keywords = ["llm", "openai", "anthropic", "gemini", "mcp"]
categories = ["web-programming", "network-programming"]

[lib]
name = "vllora_core"
path = "src/lib.rs"

[dependencies]
vllora_llm = { path = "../llm", version = "0.1.7" }
vllora_telemetry = { path = "../telemetry", version = "0.1.7" }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing-futures = { workspace = true }
tracing-opentelemetry = { workspace = true }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
async-openai = { workspace = true }
futures = "0.3"

serde_with = { version = "3.15.1", features = ["json"] }
validator = { version = "0.20", features = ["derive"] }
clust = { version = "0.9.8", package = "langdb_clust" }
serde_tuple = "1.1.2"
base64 = { workspace = true }
aws-smithy-types = { version = "1.3.4", features = [
  "serde-deserialize",
  "serde-serialize",
] }
aws-credential-types = "1.2.8"
aws-sdk-bedrock = "1.118.0"
aws-sdk-bedrockruntime = "1.111.0"
aws-smithy-runtime-api = "1.9.2"
aws-config = { version = "1.8.8", features = ["behavior-version-latest"] }
bytemuck = { workspace = true }
reqwest = { workspace = true }
jsonwebtoken = { version = "9.3.0", default-features = false, features = ["use_pem"] }
regex = "1.12.2"
secrecy = { version = "0.10.3", features = ["serde"] }
tonic = { workspace = true }
dashmap = { workspace = true }
bytes = { version = "1", features = ["serde"] }
either = "1.15.0"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
valuable = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
parking_lot = "0.12.4"
rand = "0.9"

diesel = { version = "2.3.1", features = [
  "chrono",
  "sqlite",
  "serde_json",
  "r2d2",
  "uuid",
  "numeric",
] }
libsqlite3-sys = { version = "0.27.0", features = ["bundled"] }
diesel_migrations = { version = "2.3.0", features = ["sqlite"] }
r2d2 = "0.8.10"
opentelemetry-semantic-conventions = "0.30.0"
actix-http = "3.11.1"
actix-web = "4"

rmcp = { workspace = true }
rmcp-macros = { workspace = true }
rmcp-actix-web = { workspace = true }

pin-project-lite = "0.2.11"

[features]
default = ["sqlite"]
postgres = ["diesel/postgres"]
sqlite = []
