[package]
name = "ai-gateway"
version = "0.3.2"
authors = ["LangDB Team<api@langdb.ai>"]
description = "AI gateway for managing and routing LLM requests - Govern, Secure, and Optimize your AI Traffic."
license = "Apache-2.0"
repository = "https://github.com/langdb/ai-gateway"
documentation = "https://docs.langdb.ai"
readme = "../README.md"
keywords = ["llm", "openai", "anthropic", "gemini", "mcp"]
categories = ["web-programming", "network-programming"]
edition = "2021"
default-run = "ai-gateway"
[[bin]]
name = "ai-gateway"
path = "src/main.rs"

[dependencies]
langdb_core = { path = "../core", version = "0.3.2", features = ["sqlite"] }
langdb_guardrails = { path = "../guardrails", version = "0.3.2" }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
futures = "0.3.30"
actix-cors = "0.7.1"

minijinja = "2.12.0"
reqwest = { version = "0.12.23", default-features = false, features = [
  "json",
  "stream",
  "rustls-tls",
] }
actix-web = "4"
tonic = { workspace = true}
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry_sdk = { workspace = true }
serde_yaml = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
directories = "6.0"
prettytable-rs = "0.10.0"
dotenv = "0.15.0"
futures-util = "0.3"

ratatui = "0.29.0"
crossterm = "0.29.0"
open = "5.3.2"

chrono = { workspace = true }
uuid = { version = "1.18.1", features = ["serde", "v4"] }

tokio-stream = "0.1"
actix-http = "3.11.1"