[package]
name = "vllora"
version = "0.1.22"
authors = ["Vllora Team<api@vllora.dev>"]
description = "AI gateway for managing and routing LLM requests - Govern, Secure, and Optimize your AI Traffic."
license = "Elastic-2.0"
repository = "https://github.com/vllora/vllora"
documentation = "https://vllora.dev/docs"
readme = "../README.md"
keywords = ["llm", "openai", "anthropic", "gemini", "mcp"]
categories = ["web-programming", "network-programming"]
edition = "2021"
default-run = "vllora"

[[bin]]
name = "vllora"
path = "src/main.rs"

[dependencies]
vllora_core = { path = "../core", version = "0.1.22", features = ["sqlite"], default-features = false }
vllora_llm = { path = "../llm", version = "0.1.22" }
vllora_guardrails = { path = "../guardrails", version = "0.1.22" }
vllora_telemetry = { path = "../telemetry", version = "0.1.22" }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
actix-cors = "0.7.1"

minijinja = "2.14.0"
reqwest = { version = "0.12.24", default-features = false, features = [
  "json",
  "stream",
  "rustls-tls",
] }
actix-web = "4"
tonic = { workspace = true}
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry_sdk = { workspace = true }
serde_yaml = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
prettytable-rs = "0.10.0"
dotenv = "0.15.0"
futures-util = "0.3"
mid = "4.0.0"
open = "5.3.3"

chrono = { workspace = true }
uuid = { workspace = true }

tokio-stream = "0.1"

static-serve = "0.4"
static-serve-macro = "0.4"
axum = "0.8"
diesel = { version = "2.3.5", features = ["sqlite", "chrono"] }
libsqlite3-sys = { version = "0.27.0", features = ["bundled"] }

[features]
default = []
