[package]
name = "vllora_guardrails"
version = "0.1.8"
edition = "2021"
authors = ["Vllora Team<api@vllora.dev>"]
description = "AI gateway Core for Vllora AI Gateway."
license = "Apache-2.0"
repository = "https://github.com/vllora/vllora"
documentation = "https://vllora.dev/docs"
readme = "../README.md"
keywords = ["llm", "openai", "anthropic", "gemini", "mcp"]
categories = ["web-programming", "network-programming"]

[dependencies]
vllora_core = { path = "../core", version = "0.1.8", default-features = false }
serde_json = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
jsonschema = "0.33"
regex = { workspace = true }
lazy_static = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-futures = { workspace = true }
valuable = { workspace = true }
async-openai = { workspace = true }

[dev-dependencies]
tracing-subscriber = { version = "0.3.20", features = [
  "env-filter",
  "tracing-log",
  "valuable",
] }
