[package]
name = "langdb_metadata"
version = "0.3.2"
edition = "2021"
authors = ["LangDB Team<api@langdb.ai>"]
description = "AI gateway metadata for LangDB AI Gateway."
license = "Apache-2.0"
repository = "https://github.com/langdb/ai-gateway"
documentation = "https://docs.langdb.ai"
readme = "../README.md"
keywords = ["llm", "openai", "anthropic", "gemini", "mcp"]
categories = ["web-programming", "network-programming"]

[dependencies]
langdb_core = { path = "../core", version = "0.3.2" }
diesel = { version = "2.3.1", features = [
  "chrono",
  "sqlite",
  "postgres",
  "serde_json",
  "r2d2",
  "uuid",
  "numeric",
] }
diesel_migrations = { version = "2.3.0", features = ["sqlite"] }
r2d2 = "0.8.10"
uuid = "1.18.1"
serde_json = "1.0"
serde = { version = "1.0.225", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = { workspace = true }
thiserror = "2.0.11"

[features]
default = []
postgres = []
sqlite = []
