[package]
name = "vllora_telemetry"
version = "0.1.21"
authors = ["Vllora Team<api@vllora.dev>"]
description = "Telemetry for Vllora."
license = "Apache-2.0"
repository = "https://github.com/vllora/vllora"
documentation = "https://vllora.dev/docs"
readme = "../README.md"
keywords = ["telemetry", "tracing", "logging"]
categories = ["web-programming", "network-programming"]
edition = "2021"

[lib]
name = "vllora_telemetry"
path = "src/lib.rs"


[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tonic = { workspace = true }
tokio = { workspace = true }
valuable = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry-proto = { version = "0.31.0", features = [
  "gen-tonic",
  "trace",
  "metrics",
  "with-serde",
] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-opentelemetry = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
opentelemetry_sdk = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
bytemuck = { workspace = true }
futures = { workspace = true }
clap = { version = "4.5", features = ["derive"] }

[[example]]
name = "tracing_example"
path = "examples/tracing_example.rs"

[features]
default = []
