[package]
name = "openai_example"
version = "0.1.0"
edition = "2021"

# Declare an empty workspace here so this example
# is treated as a standalone crate, not part of
# the parent Cargo workspace.
[workspace]

[dependencies]
# Use the local vllora_llm crate
vllora_llm = { path = "../.." }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
