[package]
name = "tracing_example"
version = "0.1.0"
edition = "2021"

# Standalone crate (not part of parent workspace)
[workspace]

[dependencies]
# Use the local vllora_llm crate
vllora_llm = { path = "../.." }

# Match the versions used in vllora_llm / workspace where relevant
async-openai-compat = { package = "async-openai-compat", version = "0.30.1" }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
