[package]
name = "tracing_example"
version = "0.1.0"
edition = "2021"

# Standalone crate (not part of parent workspace)
[workspace]

[dependencies]
# Use the local vllora_llm crate
vllora_llm = { path = "../.." }

# Match the versions used in vllora_llm / workspace where relevant
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
