[package]
name = "tracing_otlp_example"
version = "0.1.0"
edition = "2021"

# Standalone crate (not part of parent workspace)
[workspace]

[dependencies]
# Local crates
vllora_llm = { path = "../.." }
vllora_telemetry = "*"

# Match workspace versions for telemetry stack
async-openai-compat = { package = "async-openai-compat", version = "0.29.8" }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
opentelemetry = "0.30"
opentelemetry-otlp = { version = "0.30", features = ["tls", "grpc-tonic", "http-json"] }
opentelemetry_sdk = { version = "0.30", features = ["rt-tokio"] }
