[package]
name = "tracing_otlp_example"
version = "0.1.0"
edition = "2021"

# Standalone crate (not part of parent workspace)
[workspace]

[dependencies]
# Local crates
vllora_llm = { path = "../.." }
vllora_telemetry = "*"

# Match workspace versions for telemetry stack
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tracing = "0.1.42"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
opentelemetry = "0.31"
opentelemetry-otlp = { version = "0.31", features = ["tls", "grpc-tonic", "http-json"] }
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
